website/versioned_docs/version-2.16.x/reference/targets/jvm_war.mdx
---
title: jvm_war
---

import Field from "@site/src/components/reference/Field";
import styles from "@site/src/components/reference/styles.module.css";

---

A JSR 154 &quot;web application archive&quot; (or &quot;war&quot;) with first-party and third-party code bundled for deploys in Java Servlet containers.

Backend: <span className="color--primary">`pants.backend.experimental.java`</span>

---

<span className={styles.options}>

## `tags`

<Field
    type_repr={`field.type_hint`}
>

Arbitrary strings to describe a target.

For example, you may tag some test targets with &#x27;integration_test&#x27; so that you could run `scie-pants-linux-x86_64 --tag='integration_test' test ::` to only run on targets with that tag.

</Field>

## `description`

<Field
    type_repr={`field.type_hint`}
>

A human-readable description of the target.

Use `scie-pants-linux-x86_64 list --documented ::` to see all targets with descriptions.

</Field>

## `resolve`

<Field
    type_repr={`field.type_hint`}
>

The resolve from `[jvm].resolves` to use when compiling this target.

If not defined, will default to `[jvm].default_resolve`.

</Field>

## `content`

<Field
    type_repr={`field.type_hint`}
>

A list of addresses to `resources` and `files` targets with content to place in the document root of this WAR file.

</Field>

## `dependencies`

<Field
    type_repr={`field.type_hint`}
>

Addresses to other targets that this target depends on, e.g. [&#x27;helloworld/subdir:lib&#x27;, &#x27;helloworld/main.py:lib&#x27;, &#x27;3rdparty:reqs#django&#x27;].

This augments any dependencies inferred by Pants, such as by analyzing your imports. Use `scie-pants-linux-x86_64 dependencies` or `scie-pants-linux-x86_64 peek` on this target to get the final result.

See https://www.pantsbuild.org/v2.16/docs/targets for more about how addresses are formed, including for generated targets. You can also run `scie-pants-linux-x86_64 list ::` to find all addresses in your project, or `scie-pants-linux-x86_64 list dir` to find all addresses defined in that directory.

If the target is in the same BUILD file, you can leave off the BUILD file path, e.g. `:tgt` instead of `helloworld/subdir:tgt`. For generated first-party addresses, use `./` for the file path, e.g. `./main.py:tgt`; for all other generated targets, use `:tgt#generated_name`.

You may exclude dependencies by prefixing with `!`, e.g. `['!helloworld/subdir:lib', '!./sibling.txt']`. Ignores are intended for false positives with dependency inference; otherwise, simply leave off the dependency from the BUILD file.

</Field>

## `descriptor`

<Field
    type_repr={`field.type_hint`}
>

Path to a file containing the descriptor (i.e., web.xml) for this WAR file. Defaults to `web.xml`.

</Field>

## `shading_rules`

<Field
    type_repr={`field.type_hint`}
>

Shading rules to be applied to the individual JAR artifacts embedded in the `WEB-INF/lib` folder.

There are 4 possible shading rules available, which are as follows:
  * `shading_relocate`: Relocates the classes under the given `package` into the new package name. The default target package is `__shaded_by_pants__` if none provided in the `into` parameter.
  * `shading_rename`: Renames all occurrences of the given `pattern` by the `replacement`.
  * `shading_zap`: Removes from the final artifact the occurrences of the `pattern`.
  * `shading_keep`: Keeps in the final artifact the occurrences of the `pattern` (and removes anything else).

When defining shading rules, just add them in this field using the previously listed rule alias and passing along the required parameters.

</Field>

## `output_path`

<Field
    type_repr={`field.type_hint`}
>

Where the built asset should be located.

If undefined, this will use the path to the BUILD file, followed by the target name. For example, `src/python/project:app` would be `src.python.project/app.ext`.

When running `scie-pants-linux-x86_64 package`, this path will be prefixed by `--distdir` (e.g. `dist/`).

Warning: setting this value risks naming collisions with other package targets you may have.

</Field>



</span>